@@ -2,7 +2,6 @@
   "$schema": "https://json-schema.org/draft/2019-09/schema",
   "type": "string",
   "enum": [
-    "None",
     "100%",
     "150%",
     "225%",
